--- a/.github/workflows/format_java.yml
+++ b/.github/workflows/format_java.yml
@@ -30,7 +30,7 @@ jobs:
 
 
       - name: Jetbrains style
-        uses: findologic/intellij-format-action@v1
+        uses: findologic/intellij-format-action@1.0.0
         with:
           include-glob: '*.kt,*.java'
           path: .
